# NormQtyPact

./: .gitignore  CHANGELOG.md  DEV_GUIDE.MD  NormQtyPact.py  PactComponentDirectory.csv  PelucunComponentDirectory.csv  PelucunComponentDirectory.json  README.md  pyproject.toml  requirements.txt
Resources/: FEMA P-58_NormativeQuantityEstimationTool_031818.xlsm
examples/: basic_usage.py  mixed_occupancy.py
normqtypact/: __init__.py  cli.py  core.py
normqtypact/resources/: FEMA P-58_NormativeQuantityEstimationTool_031818.xlsm
